Fix jumbled multi-line heading
The h1#logo CSS inherited "line-height: 1.4em" from html, which caused
successive lines of the h1 to overlap for some reason.

Thanks to dieggsy for reporting this.

--- a/www/style.css
+++ b/www/style.css
@@ -27,6 +27,7 @@ td {
   font-style: italic;
   font-size: 5em;
   margin-top: 0.5em;
+  line-height: 1em;
 }
 
 a:link {
